--- a/src/about.html
+++ b/src/about.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Rajdhani:wght@700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
   <title>CLew Portfolio</title>
 </head>
 <body class="bg">
@@ -39,18 +40,47 @@
   </header>
 
   <main class="about">
-    <h1 class="large-heading">
+    <!-- <h1 class="large-heading">
       About Me
-    </h1>
-    <h2 class="small-heading">
-      Hi! I'm Chynna!
+    </h1> -->
+    <h2 class="large-heading">
+      Hello, I'm Chynna!
     </h2>
    <div class="about-info">
      <img src="img/profile-pic.jpg" alt="picture of chynna" class="my-image">
    </div>
+   <br>
+   <div class="icons-about">
+     <h2>SKILLS</h2>
+    <i class="devicon-html5-plain-wordmark"></i>
+    <i class="devicon-css3-plain-wordmark"></i>
+    <i class="devicon-bootstrap-plain-wordmark"></i>
+    <i class="devicon-sass-original"></i>
+    <i class="devicon-javascript-plain"></i>
+    <i class="devicon-jquery-plain-wordmark"></i>
+    <i class="devicon-csharp-plain"></i>
+    <i class="devicon-dotnetcore-plain"></i>
+    <i class="devicon-mysql-plain-wordmark"></i>
+    <i class="devicon-npm-original-wordmark"></i>
+    <i class="devicon-webpack-plain"></i>
+    <i class="devicon-git-plain"></i>
+
+   </div>
    <div class="bio">
-     <h3 class="text-secondary">BIO</h3>
-     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem accusamus odio ea architecto quibusdam. Placeat eaque, debitis qui laboriosam voluptas sed eum cumque eligendi illo architecto! Ducimus qui est obcaecati.</p>
+     <h3>
+      <br>
+      I am a Junior Full-Stack Developer residing in Portland, Oregon.
+      <br>
+      Most of my career experience has been in the service industry, where I learned the value of human communication and perception. 
+      <br>
+      The pandemic gave me time to explore new outlets and I fell in love with coding. 
+      <br>
+      I am excited to use my skills as a creative developer to build innovative and stylized applications.
+      <br>
+      <br>
+      In my free time, I enjoy reading comic books, playing video games (specifically indie and Nintendo games), Dungeons and Dragons (5e), watching cartoons, crochet, skiing, and playing with my dog!
+     </h3>
+    
    </div>
   </main>
   <script src="js/main.js"></script>
