update projects, add email to nav

--- a/src/about.html
+++ b/src/about.html
@@ -33,16 +33,13 @@
           <a href="projects.html" class="nav-link">Projects</a>
         </li>
         <li class="nav-item">
-          <a href="contact.html" class="nav-link">Contact</a>
+          <a href="mailto:chynnalew@yahoo.com" class="nav-link">Email</a>
         </li>
       </ul>
     </nav>
   </header>
 
   <main class="about">
-    <!-- <h1 class="large-heading">
-      About Me
-    </h1> -->
     <h2 class="large-heading">
       Hello, I'm Chynna!
     </h2>
@@ -75,7 +72,7 @@
       <br>
       The pandemic gave me time to explore new outlets and I fell in love with coding. 
       <br>
-      I am excited to use my skills as a creative developer to build innovative and stylized applications.
+      I am excited to use my skills as a creative developer to build innovative and stylized applications!
       <br>
       <br>
       In my free time, I enjoy reading comic books, playing video games (specifically indie and Nintendo games), Dungeons and Dragons (5e), watching cartoons, crochet, skiing, and playing with my dog!
