--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
           <a href="projects.html" class="nav-link">Projects</a>
         </li>
         <li class="nav-item">
-          <a href="contact.html" class="nav-link">Contact</a>
+          <a href="mailto:chynnalew@yahoo.com" class="nav-link">Email</a>
         </li>
       </ul>
     </nav>
